# chat

./: .README.md.swp  README.md  pyproject.toml  requirements.md
data/: flatmovieList.json  messages.json  movieList.json
data/messages_audit/: .part-00000-19dfeee2-7fe4-4b10-9ef5-1f2ed23b218b-c000.snappy.parquet.crc  (+63 more)
data/messages_audit.parquet/: .part-00000-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet.crc  .part-00001-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet.crc  .part-00002-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet.crc  .part-00003-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet.crc  .part-00004-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet.crc  .part-00005-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet.crc  .part-00006-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet.crc  .part-00007-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet.crc  part-00000-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet  part-00001-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet  part-00002-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet  part-00003-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet  part-00004-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet  part-00005-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet  part-00006-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet  part-00007-7da5ce6d-5b0a-4e5c-be75-f78b19ed5b05-c000.snappy.parquet
py/: analyzer.py  audit.py  chat_analyzer.py
src/: chat.py
src/audit/: audit.py  process.py
(+5 files in other folders)
