[project]
name = "chat"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Seokxkyu", email = "kyuseok000@gmail.com"},
]

requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "kafka>=1.3.5",
    "kafka-python>=2.0.2",
]


[tool.pdm]
distribution = false
